# qdfm

./: .gitmodules  Cargo.toml  README.md  build.rs  file1  file2
.cargo/: config.toml
src/: clipboard.rs  config.rs  core.rs  drives.rs  error_handling.rs  file_properties.rs  globals.rs  key_events.rs  lib.rs  main.rs  manage_open_with.rs  progress_window.rs  rename_window.rs  sort.rs  tabs.rs
src/callbacks/: context_menu.rs  filemanager.rs  headers.rs  mod.rs  properties.rs  sidebar.rs  tabs.rs  utils.rs
src/callbacks/filemanager/: mod.rs  selection.rs
src/clipboard/: copy.rs  cut.rs  delete.rs  mod.rs  paste.rs
src/context_menus/: cm_file.rs  context_items.rs  create_new.rs  files.rs  mod.rs  secondary_context_menu.rs
src/keybinds/: keybind.rs  keybind_callbacks.rs  keys.rs  mod.rs
src/tests/: mod.rs  types.rs
src/tests/clipboard/: copy.rs  cut.rs  delete.rs  mod.rs  paste.rs
src/ui/: main_window.rs  mainwindow.slint  prop_window.rs
src/ui/ui_listener/: internal.rs  mod.rs
src/utils/: doubleclicks.rs  drag_and_drop.rs  error_handling.rs  file_picker.rs  mod.rs  types.rs
ui/: colheaders.slint  context-menu.slint  filemanager.slint  icons.slint  mainwindow.slint  manage_open_with.slint  progress_window.slint  properties.slint  rename_window.slint  settings.slint  sidebar.slint  tabs.slint  theme.slint  utils.slint
ui/create_new/: file.slint
