[package]
name = "qdfm"
build = "build.rs"
version = "0.1.0"
edition = "2021"
license = "GPLv3"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.29.10"
slint = { version = "1.14.1", default-features=false, features=["std", "backend-winit", "renderer-skia-opengl", "compat-1-2"]} #Use vulkan when fixed
winit = "0.30.5"
i-slint-core = { version="1.14.1"}
i-slint-backend-winit = { version="1.14.1"}
chrono = {version = "*", default-features=false, features=["alloc", "clock"]}
magic = "0.16.2"
syscalls = { version="0.6.18", features=["x86", "x86_64", "aarch64", "arm"]}
walkdir = "*"
arboard = {version = "3.4.1", default-features=false, features=["wayland-data-control", "wl-clipboard-rs"]}
serde_json = "*"
serde = "*"
dbus = {version="0.9.7", default-features=false}
x11rb = "0.13.1"

#[dev-dependencies]
#mockall = "*"

[patch.crates-io]
winit = { path = "winit"}

[build-dependencies]
slint-build = { version = "1.14.1"}

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true #ADD this
#debug = true #AND REMOVE THIS for profiling

[build]
target="x86_64-unknown-linux-gnu"
